<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/teal_200"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        android:soundEffectsEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addpassword"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:drawableLeftCompat="@android:drawable/ic_lock_idle_lock"
            app:drawableStartCompat="@android:drawable/ic_lock_idle_lock" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/addAppCardview"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addnameTextview"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/addname"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/addnameEdittext"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/addnameTextview"
                android:layout_toRightOf="@+id/addnameTextview"
                android:autofillHints="@string/addnamehint"
                android:hint="@string/addnamehint"
                android:inputType="textCapSentences|text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/addpassTextview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/addnameTextview"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/addpass"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/addnameEdittext"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/addnameTextview"
                android:layout_toRightOf="@+id/addnameTextview"
                android:autofillHints="@string/addnamehint"
                android:hint="@string/addnamehint"
                android:inputType="textPassword"
                android:singleLine="true" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/addPassbutton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/addAppCardview"
        android:layout_marginTop="50dp"
        android:text="@string/add"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/teal_200"
        android:clickable="true"
        android:focusable="true"
        />

    <Button
        android:id="@+id/generatepasswordbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_200"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/generatepassword"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addPassbutton"
        app:layout_constraintTop_toBottomOf="@id/addAppCardview" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />



</androidx.constraintlayout.widget.ConstraintLayout>